--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,14 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+@import 'custom';
+
+@import '~vuetify/dist/vuetify.min.css';
+
+@import '~@mdi/font/css/materialdesignicons.min.css';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
